fix vertical position of cdm collapse button in floating title

--- a/css/tt-rss.css
+++ b/css/tt-rss.css
@@ -1015,6 +1015,10 @@ span.collapseBtn {
 	cursor : pointer;
 }
 
+span.collapseBtn img {
+	vertical-align : middle;
+}
+
 div.postContent h1 {
 	font-size : 16px;
 }
